feat:fisier nou de index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!--Right side container-->
       <div class="right-side-container">
         <!--About me section-->
-        <div class="about-me-section">
+        <div>
           <h4>SEO Specialist & CMS Administrator / Junior Web Developer</h4>
           <h1>Raducu Necula</h1>
           <p>
@@ -27,16 +27,16 @@
             b2b), Google Webmaster Tools (Search Console), GA4 and Meta Business
             Suite. With a major interest in web development, I am looking for
             professional development opportunities.
-            <br>
-            <br>
-            I consider myself as someone
-            who quickly grasps new concepts, driven by self-motivation and a
-            strong work ethic. I am determined to continually seek knowledge and
-            firmly believe that there's always space for growth and improvement.
+            <br />
+            <br />
+            I consider myself as someone who quickly grasps new concepts, driven
+            by self-motivation and a strong work ethic. I am determined to
+            continually seek knowledge and firmly believe that there's always
+            space for growth and improvement.
           </p>
         </div>
 
-        <hr>
+        <hr />
 
         <!--Tools section-->
         <div>
@@ -60,7 +60,7 @@
           </ul>
         </div>
 
-        <hr>
+        <hr />
 
         <!--Interships section-->
         <div>
@@ -69,13 +69,13 @@
           <p>clientipeviata.ro | November 2023 - December 2023</p>
           <ul>
             <li>
-              Optimized blogs and content using keyword strategies research 
-              and copywriting to rank articles on the best positions in the SERP
+              Optimized blogs and content using keyword strategies research and
+              copywriting to rank articles on the best positions in the SERP
             </li>
           </ul>
         </div>
 
-        <hr>
+        <hr />
 
         <!--Work experience section-->
         <div>
@@ -84,24 +84,37 @@
           <div>
             <h4>Search Engine Optimization Specialist</h4>
             <p>iTime Corporation | March 2023 - November 2023</p>
-            <p>The responsibility of the job consisted in the administration of the 
-              website through the Wordpress platform (product documentation, 
-              stocks, etc) and the optimization from an onpage and offpage SEO 
-              point of view to increase traffic and search engine awareness</p>
+            <p>
+              The responsibility of the job consisted in the administration of
+              the website through the Wordpress platform (product documentation,
+              stocks, etc) and the optimization from an onpage and offpage SEO
+              point of view to increase traffic and search engine awareness
+            </p>
             <ul>
-              <li>Managed to improve the ROI from 60% to 128% for the budgets 
-              allocated to social media ads.</li>
-              <li>Organized the stocks, images, descriptions, prices and product 
-              features on the website.</li>
-              <li>Optimized conversion rates using cross-selling and up-selling 
-              strategies.
+              <li>
+                Managed to improve the ROI from 60% to 128% for the budgets
+                allocated to social media ads.
+              </li>
+              <li>
+                Organized the stocks, images, descriptions, prices and product
+                features on the website.
+              </li>
+              <li>
+                Optimized conversion rates using cross-selling and up-selling
+                strategies.
+              </li>
+
               <li>I learned how to use a CMS (Wordpress, B2B).</li>
-              <li>I optimized the entire site from an SEO point of view, in a few 
-              months, some product pages reaching higher than eMag in 
-              search results, and other category pages in the top 3-10 in SERP.</li>
-              <li>Learned skills in analyzing data from Google Analytics, Search 
-              Console, PageSpeed Insight and Keyword Planner to track 
-              opportunities and improve online awareness performance.</li>
+              <li>
+                I optimized the entire site from an SEO point of view, in a few
+                months, some product pages reaching higher than eMag in search
+                results, and other category pages in the top 3-10 in SERP.
+              </li>
+              <li>
+                Learned skills in analyzing data from Google Analytics, Search
+                Console, PageSpeed Insight and Keyword Planner to track
+                opportunities and improve online awareness performance.
+              </li>
             </ul>
           </div>
 
@@ -109,11 +122,10 @@
           <div>
             <h4>Call Center Agent</h4>
             <p>iTime Corporation | February 2023 - March 2023</p>
-
           </div>
         </div>
 
-        <hr>
+        <hr />
 
         <!--Eduaction section-->
         <div>
@@ -127,65 +139,85 @@
           </div>
         </div>
 
-        <hr>
+        <hr />
 
         <!--Extracurricular activities-->
         <div>
           <h3>Extracurricular activities</h3>
           <h4>Certificate of attendance | ERASMUS+</h4>
           <p>July 2021 | Braila</p>
-          <p>SP-ADULT-BLEND-Blended mobility of adult learners. Learn together - 
-            Create opportunities / Strategic Partnership for Adult Education</p>
+          <p>
+            SP-ADULT-BLEND-Blended mobility of adult learners. Learn together -
+            Create opportunities / Strategic Partnership for Adult Education
+          </p>
         </div>
-
       </div>
 
       <!--Sidebar section-->
       <aside class="sidebar-section">
-        <img src="images/image.jpg" alt="Profile picture" width="350" />
+        <img
+          src="images/image.jpg"
+          alt="Profile picture"
+          width="350"
+          class="sidebar-image"
+        />
 
         <!--Contanct informations-->
-        <div>
-          <h3>Contacts</h3>
+        <div class="contacts-container">
+          <h3 class="contacts-header">Contacts</h3>
 
-          <div>
-            <span>Number</span>
-            <br>
-            <a href="tel:+0745160808"><b>+40 745 160 808</b></a>
-          </div>
-          <div>
-            <br>
-            <span>Email</span>
-            <br>
-            <a href="mailto:florian.raducu01@gmail.com"><b>florian.raducu01@gmail.com</b></a>
-          </div>
-          <br>
-          <div>
-            <span>Social Media</span>
-            <br>
-            <a href="http://www.linkedin.com/in/raducu-necula/"><b>Linkedin profile</b></a>
+          <div class="contacts-elements">
+            <div>
+              <span class="contacts-item">Number:</span>
+              <a href="tel:+0745160808" class="contacts-phone"
+                >+40 745 160 808</a
+              >
+            </div>
+            <div>
+              <span class="contacts-item">Email:</span>
+              <a href="mailto:florian.raducu01@gmail.com" class="contacts-email"
+                >florian.raducu01@gmail.com</a
+              >
+            </div>
+            <div>
+              <span class="contacts-item">Social Media:</span>
+              <a
+                href="http://www.linkedin.com/in/raducu-necula/"
+                class="contacts-linkedin"
+                >Linkedin profile</a
+              >
+            </div>
           </div>
         </div>
 
         <!--Personal details-->
-        <div>
-          <h3>Personal details</h3>
-          <p>Date of birth<br>
-            <b>August 21, 2003</b></p>
-          
-          <p>Driver's license<br>
-          <b>B</b></p>
+        <div class="personal-details">
+          <h3 class="personal-details-header">Personal details</h3>
 
-          <p>Gender<br>
-            <b>Male</b></p>
-
-          <p>Nationality<br>
-          <b>Romanian</b></p>
+          <div class="pd-elements">
+            <div>
+              <p class="pd-item">Date of birth</p>
+               <p class="pd-item2">August 21, 2003</p>
+            </div>
+            <div>
+              <p class="pd-item">Driver's license</p>
+               <p class="pd-item2">B</p>
+            </div>
+            <div>
+              <p class="pd-item">Gender
+              <p class="pd-item2">Male</p>
+            </div>
+            <div>
+              <p class="pd-item">Nationality</p>
+              <p class="pd-item2">Romanian</p>
+            </div>
+          </div>
         </div>
 
         <!--Top skills section-->
-        <div>
-          <h3>Top Skills</h3>
+        <div class="top-skills-section">
+          <h3 class="top-skills-header">Top Skills</h3>
+          <div class="top-skills-list">
           <ul>
             <li>Team spirit</li>
             <li>Leadership</li>
@@ -194,10 +226,12 @@
             <li>Time management</li>
           </ul>
         </div>
+        </div>
 
         <!--Tech skills section-->
-        <div>
-          <h3>Tech Skills</h3>
+        <div class="tech-skills-section">
+          <h3 class="tech-skills-header">Tech Skills</h3>
+          <div class="tech-skills-list">
           <ul>
             <li>SEO</li>
             <li>Digital Marketing</li>
@@ -211,12 +245,14 @@
             <li>GIT</li>
           </ul>
         </div>
+        </div>
 
         <!--Soft Skills-->
-        <div>
-          <h3>Soft Skills</h3>
+        <div class="soft-skills-section">
+          <h3 class="soft-skills-header">Soft Skills</h3>
+          <div class="soft-skills-list">
           <ul>
-            <li>Patience & Stress Mng.</li>
+            <li>Patience & Stress Management</li>
             <li>Disciplined</li>
             <li>Flexibility</li>
             <li>Teamwork</li>
@@ -225,21 +261,18 @@
             <li>Continuous Improvement</li>
           </ul>
         </div>
+        </div>
 
         <!--Hobbies-->
-        <div>
-          <h3>Hobbies</h3>
+        <div class="hobbies-section">
+          <h3 class="hobbies-header">Hobbies</h3>
+          <div class="hobbies-list">
           <ul>
-            <li>
-              Fitness
-            </li>
-            <li>
-              Read
-            </li>
-            <li>
-              Coding
-            </li>
+            <li>Fitness</li>
+            <li>Read</li>
+            <li>Coding</li>
           </ul>
+        </div>
         </div>
       </aside>
     </div>
