feat:fisier nou de index

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="right-side-container">
         <!--About me section-->
         <div>
-          <h4>SEO Specialist & CMS Administrator / Junior Web Developer</h4>
-          <h1>Raducu Necula</h1>
-          <p>
+          <h4 class="about-me-profession">SEO Specialist & CMS Administrator / Junior Web Developer</h4>
+          <h1 class="about-me-name">Raducu Necula</h1>
+          <p class="about-me-description">
             One year experince in Search Engine Optimization (S.E.O.) and
             E-commerce administration. Experience working with CMS (Wordpress,
             b2b), Google Webmaster Tools (Search Console), GA4 and Meta Business
@@ -36,12 +36,10 @@
           </p>
         </div>
 
-        <hr />
-
         <!--Tools section-->
-        <div>
-          <h3>Tools worked with</h3>
-          <ul>
+        <div class="tools-section">
+          <h3 class="tools-header">Tools worked with</h3>
+          <ul class="tools-list">
             <li>Google Search Console</li>
             <li>Google Analytics</li>
             <li>Google Workspace</li>
@@ -53,21 +51,22 @@
         </div>
 
         <!--Certification section-->
-        <div>
-          <h3>Certifications</h3>
-          <ul>
-            <li>SEO Specialist - Skillab, International Online Academy</li>
+        <div class="certification-section">
+          <h3 class="certification-header">Certifications</h3>
+          <ul class="certification-list">
+            <li>
+              <a href="https://imgur.com/a/25k7lPz" target="_blank" class="certification-item">SEO Specialist</a>
+              - Skillab, International Online Academy
+            </li>
           </ul>
         </div>
 
-        <hr />
-
-        <!--Interships section-->
-        <div>
-          <h3>Interships</h3>
-          <h4>Search Engine Optimization Specialist</h4>
-          <p>clientipeviata.ro | November 2023 - December 2023</p>
-          <ul>
+        <!--Intership section-->
+        <div class="internship-section">
+          <h3 class="internship-header">Intership</h3>
+          <h4 class="internship-role">Search Engine Optimization Specialist<a href="https://clientipeviata.ro/" target="_blank" class="internship-company">| clientipeviata.ro</a></h4>
+          <p class="internship-time">November 2023 - December 2023</p>
+          <ul class="internship-list">
             <li>
               Optimized blogs and content using keyword strategies research and
               copywriting to rank articles on the best positions in the SERP
@@ -75,22 +74,20 @@
           </ul>
         </div>
 
-        <hr />
-
         <!--Work experience section-->
-        <div>
-          <h3>Work Experience</h3>
+        <div class="work-experience-section">
+          <h3 class="work-experience-header">Work Experience</h3>
           <!--1st company-->
           <div>
-            <h4>Search Engine Optimization Specialist</h4>
-            <p>iTime Corporation | March 2023 - November 2023</p>
-            <p>
+            <h4 class="work-experience-role">Search Engine Optimization Specialist<a href="https://itime.ro/" target="_blank" class="work-experience-company">| iTime Corporation</a></h4>
+            <p class="work-time">March 2023 - November 2023</p>
+            <p class="work-description">
               The responsibility of the job consisted in the administration of
               the website through the Wordpress platform (product documentation,
               stocks, etc) and the optimization from an onpage and offpage SEO
               point of view to increase traffic and search engine awareness
             </p>
-            <ul>
+            <ul class="work-experience-list">
               <li>
                 Managed to improve the ROI from 60% to 128% for the budgets
                 allocated to social media ads.
@@ -120,36 +117,32 @@
 
           <!--2nd company-->
           <div>
-            <h4>Call Center Agent</h4>
-            <p>iTime Corporation | February 2023 - March 2023</p>
+            <h4 class="nd-work-experience-role">Call Center Agent<a href="https://itime.ro/" target="_blank" class="nd-work-experience-company">| iTime Corporation</a></h4>
+            <p class="nd-work-time">February 2023 - March 2023</p>
           </div>
         </div>
 
-        <hr />
-
         <!--Eduaction section-->
-        <div>
-          <h3>Education</h3>
+        <div class="education-section">
+          <h3 class="education-header">Education</h3>
 
           <!--1st education-->
           <div>
-            <h4>Liceul Tehnologic "Angel Saligny", Braila</h4>
-            <p>September 2018 - June 2022 | Romania</p>
-            <p>Electronica & Automatizari</p>
+            <h4><a href="https://saligny-braila.ro/" target="_blank" class="education-school">Liceul Tehnologic "Angel Saligny", Braila</a></h4>
+            <p class="education-profile">Electronica & Automatizari</p>
+            <p class="education-time">September 2018 - June 2022 | Romania</p>
           </div>
         </div>
 
-        <hr />
-
         <!--Extracurricular activities-->
-        <div>
-          <h3>Extracurricular activities</h3>
-          <h4>Certificate of attendance | ERASMUS+</h4>
-          <p>July 2021 | Braila</p>
-          <p>
+        <div class="extracurricular-activities-section">
+          <h3 class="extracurricular-activities-header">Extracurricular activities</h3>
+          <h4 class="extracurricular-activities-diploma">Certificate of attendance | ERASMUS+</h4>
+          <p class="extracurricular-activities-description">
             SP-ADULT-BLEND-Blended mobility of adult learners. Learn together -
             Create opportunities / Strategic Partnership for Adult Education
           </p>
+          <p class="extracurricular-activities-time">July 2021 | Braila, Romania</p>
         </div>
       </div>
 
@@ -183,6 +176,7 @@
               <span class="contacts-item">Social Media:</span>
               <a
                 href="http://www.linkedin.com/in/raducu-necula/"
+                target="_blank"
                 class="contacts-linkedin"
                 >Linkedin profile</a
               >
