--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My CV</title>
+    <title>Raducu Necula's CV</title>
     <link rel="stylesheet" href="/styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/images/cv-favicon.svg" type="image/x-icon">
   </head>
   <body>
     <!--Our app-->
@@ -103,7 +104,7 @@
 
               <li>I learned how to use a CMS (Wordpress, B2B).</li>
               <li>
-                I optimized the entire site from an SEO point of view, in a few
+                I optimized the entire site, in a few
                 months, some product pages reaching higher than eMag in search
                 results, and other category pages in the top 3-10 in SERP.
               </li>
